Fix all security vulnerabilities detected by Semgrep OWASP scan
Fixes applied:
- SQL Injection: Replaced string concatenation with PreparedStatement
- Command Injection: Added allowlist validation + ProcessBuilder
- Weak Crypto: Changed MD5 to SHA-256
- Hardcoded Credentials: Removed, rely on Spring Security JWT auth
- Insecure Cipher: Changed AES/ECB to AES/GCM with random IV

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>